--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ input,
 button,
 textarea,
 select {
-  all: unset;
+  outline: none;
+  border: none;
   font: inherit;
+  box-sizing: border-box;
 }
