--- a/src/pages/TipCalculator/TipCalculator.module.css
+++ b/src/pages/TipCalculator/TipCalculator.module.css
@@ -24,7 +24,7 @@
   text-align: center;
   font-size: 1.2em;
   letter-spacing: .5rem;
-  margin-bottom: 3rem;
+  padding: 3rem;
 }
 
 .mainTitle span {
@@ -33,8 +33,6 @@
 }
 
 .calculatorContainer {
-  height: 100vh;
-  height: 100svh;
   background-color: var(--white);
   border-top-left-radius: 1.5rem;
   border-top-right-radius: 1.5rem;
@@ -109,7 +107,6 @@
   outline: none;
   background-color: var(--very-dark-cyan);
   color: var(--white);
-  /* width: 5rem; */
   padding: .5rem;
   text-align: center;
   border-radius: .5rem;
@@ -121,7 +118,6 @@
 
 .tipButton:hover {
   cursor: pointer;
-  /* background-color: var(--strong-cyan); */
   background-color: var(--light-grayish-cyan);
   color: var(--very-dark-cyan);
 }
@@ -129,7 +125,6 @@
 .summaryWrapper {
   background-color: var(--very-dark-cyan);
   border-radius: .5rem;
-  margin: 2rem 0;
   padding: 1.5rem;
   width: 90%;
   max-width: 30rem;
@@ -187,13 +182,17 @@
     height: 100svh;
     display: grid;
     place-content: center;
-    /* padding: auto auto; */
+  }
+
+  .mainTitle {
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%);
+    position: absolute;
   }
 
   .calculatorContainer {
     display: flex;
-    /* width: 70%;
-    height: 60%; */
     width: 60vw;
     height: 60vh;
     margin-inline: auto;
