--- a/src/pages/TipCalculator/TipCalculator.module.css
+++ b/src/pages/TipCalculator/TipCalculator.module.css
@@ -128,7 +128,8 @@
   padding: 1.5rem;
   width: 90%;
   max-width: 30rem;
-  margin-inline: auto;
+  /* margin-inline: auto; */
+  margin: 1rem auto;
 }
 
 .summaryWrapper p {
