--- a/src/pages/FaqAccordion/FaqAccordion.module.css
+++ b/src/pages/FaqAccordion/FaqAccordion.module.css
@@ -27,17 +27,14 @@
   place-content: center;
   font-family: "Kumbh Sans", sans-serif;
   font-size: 12px;
-  padding: 3rem 0;
+  padding: 10rem 0 5rem 0;
 }
 
 .faqWrapper {
-  width: 90vw;
-  max-width: 40rem;
-  min-height: 70vh;
+  width: 350px;
   border-radius: 1.5rem;
   background-color: white;
-  margin-top: 7rem;
-  padding-bottom: 2rem;
+  padding-bottom: 4rem;
   position: relative;
 }
 
@@ -59,16 +56,17 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 0 1rem;
 }
 
 .mainTitle {
-  font-size: 3.5em;
+  font-size: 2.85em;
   text-align: center;
   margin: 1rem 0;
 }
 
 .faqItem {
-  width: 90%;
+  width: 100%;
   margin-inline: auto;
 }
 
@@ -123,8 +121,8 @@
 .imagesWrapper {
   background-image: url("/src/assets/faq-accordion/images/bg-pattern-mobile.svg");
   background-repeat: no-repeat;
-  background-size: 260px auto;
-  background-position: center 0;
+  background-size: 80%;
+  background-position: center top;
   height: 150px;
 }
 
@@ -144,40 +142,37 @@
   display: none;
 }
 
-@media screen and (width >= 1440px) {
+@media screen and (width >= 1024px) {
   .faqWrapper {
-    max-width: 80%;
+    width: 950px;
+    height: 60vh;
     display: flex;
     align-items: center;
-    gap: 5rem;
+    gap: 1rem;
     margin: 0 auto;
     padding: 0;
-    /* position: static; */
   }
 
   .imagesWrapper {
-    background-image: url("/src/assets/faq-accordion/images/bg-pattern-desktop.svg");
-    background-size: 1250px;
-    background-position: 110% 70%;
     height: 100%;
-    /* width: 50%; */
-    /* width: 1250px; */
     width: 600px;
     margin: 0;
     position: relative;
     overflow: hidden;
+
+    background-image: url("/src/assets/faq-accordion/images/bg-pattern-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: 200%;
+    background-position: -500px -260px;
   }
 
   .womanImage {
     background-image: url("/src/assets/faq-accordion/images/illustration-woman-online-desktop.svg");
-    background-size: 600px;
-    width: 100%;
+    background-size: 90%;
     width: 600px;
     height: 100%;
-    left: 35%;
-    top: -3rem;
-    /* left: 10%; */
-    /* top: 50%; */
+    left: 38%;
+    top: -1rem;
   }
 
   .boxImage {
@@ -185,8 +180,8 @@
     width: 200px;
     height: auto;
     position: absolute;
-    top: 38%;
-    left: -5rem;
+    top: 40%;
+    left: -6rem;
     z-index: 10;
   }
 
@@ -197,9 +192,9 @@
   }
 
   .faqItems {
-    padding: 0;
-    /* margin-right: 5rem; */
     height: 50vh;
+    margin-top: 2rem;
+    margin-right: 3rem;
   }
 
   .faqItem {
