--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,7 +2,6 @@
 
 .container {
   font-family: "Righteous", cursive;
-  /* background-color: #181818; */
   background-color: whitesmoke;
   height: 100vh;
   height: 100svh;
@@ -12,7 +11,6 @@
 
 a {
   text-decoration: none;
-  /* color: white; */
   color: black;
 }
 
@@ -34,10 +32,6 @@ a {
     rgba(0, 0, 0, .1) 9%,
     transparent 9%
   );
-  /* background-image: radial-gradient(
-    rgba(255, 255, 255, 0.1) 9%,
-    transparent 9%
-  ); */
   background-position: 0% 0%;
   background-size: 10vmin 10vmin;
   position: absolute;
@@ -78,6 +72,7 @@ a {
   /* color: white; */
   font-size: 5em;
   letter-spacing: 2rem;
+  text-align: center;
 }
 
 .menuItems:hover .linkText {
