--- a/src/pages/PricingComponent/PricingComponent.module.css
+++ b/src/pages/PricingComponent/PricingComponent.module.css
@@ -1,4 +1,106 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+
+:root {
+  --primary-gradient: hsl(236, 72%, 79%);
+  --secondary-gradient: hsl(237, 63%, 64%);
+  --very-light-grayish-blue: hsl(240, 78%, 98%);
+  --light-grayish-blue: hsl(234, 14%, 74%);
+  --grayish-blue: hsl(233, 13%, 49%);
+  --dark-grayish-blue: hsl(232, 13%, 33%);
+  --border-radius: 0.5rem;
+}
+
 .container {
-  background-color: pink;
-  padding: 5rem 0;
+  font-size: 15px;
+  background-color: var(--very-light-grayish-blue);
+  padding: 2.5rem 0 5rem 0;
+  font-family: "Montserrat", sans-serif;
+
+  background-image: url("/src/assets/pricing-component/images/bg-top.svg");
+  background-repeat: no-repeat;
+  background-position: right -180px top -70px;
+}
+
+.subscriptionPlan {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 250px;
+  margin-inline: auto;
+  color: var(--light-grayish-blue);
+}
+
+.pricingTitle {
+  color: var(--grayish-blue);
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.cardsContainer {
+  margin-top: 5rem;
+  display: grid;
+  gap: 2rem;
+  justify-content: center;
+  /* font-size: 1.5em; */
+}
+
+.cardWrapper {
+  width: 360px;
+  background-color: white;
+  color: var(--dark-grayish-blue);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  place-content: center;
+  border-radius: 0.5rem;
+}
+
+.cardWrapper p {
+  text-align: center;
+  padding: 1.5rem;
+}
+
+.cardWrapper p:not(:first-child) {
+  border-bottom: 1px solid var(--light-grayish-blue) ;
+}
+
+.cardTitle {
+  font-size: 1.25e
+}
+
+.cardPrice {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.dollar {
+  font-size: 2em;
+}
+
+.price { 
+  font-size: 3em;
+}
+
+.cardButton {
+  margin-top: 2.5rem;
+  width: 100%;
+  padding: 1rem;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  background: linear-gradient(90deg, var(--primary-gradient), var(--secondary-gradient) 50% );
+  color: var(--very-light-grayish-blue);
+}
+
+.cardWrapper:nth-child(2) {
+  background: linear-gradient( var(--primary-gradient), var(--secondary-gradient));
+  color: white;
+}
+
+.cardWrapper:nth-child(2) button {
+  color: var(--dark-grayish-blue);
+  background: var(--very-light-grayish-blue);
 }
