--- a/src/pages/PricingComponent/PricingComponent.module.css
+++ b/src/pages/PricingComponent/PricingComponent.module.css
@@ -11,6 +11,8 @@
 }
 
 .container {
+  min-height: 100vh;
+  min-height: 100svh;
   font-size: 15px;
   background-color: var(--very-light-grayish-blue);
   padding: 2.5rem 0 5rem 0;
@@ -19,6 +21,8 @@
   background-image: url("/src/assets/pricing-component/images/bg-top.svg");
   background-repeat: no-repeat;
   background-position: right -180px top -70px;
+  position: relative;
+  z-index: 10;
 }
 
 .subscriptionPlan {
@@ -55,6 +59,8 @@
   justify-content: center;
   place-content: center;
   border-radius: 0.5rem;
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0 10px 5px red; */
 }
 
 .cardWrapper p {
@@ -63,11 +69,11 @@
 }
 
 .cardWrapper p:not(:first-child) {
-  border-bottom: 1px solid var(--light-grayish-blue) ;
+  border-bottom: 1px solid var(--light-grayish-blue);
 }
 
 .cardTitle {
-  font-size: 1.25e
+  font-size: 1.5em;
 }
 
 .cardPrice {
@@ -81,8 +87,8 @@
   font-size: 2em;
 }
 
-.price { 
-  font-size: 3em;
+.price {
+  font-size: 4em;
 }
 
 .cardButton {
@@ -91,16 +97,68 @@
   padding: 1rem;
   border-radius: var(--border-radius);
   cursor: pointer;
-  background: linear-gradient(90deg, var(--primary-gradient), var(--secondary-gradient) 50% );
+  background: linear-gradient(
+    90deg,
+    var(--primary-gradient),
+    var(--secondary-gradient) 50%
+  );
   color: var(--very-light-grayish-blue);
 }
 
+.cardButton:hover {
+  background: white;
+  color: var(--dark-grayish-blue);
+  outline: 1px solid var(--dark-grayish-blue);
+}
+
 .cardWrapper:nth-child(2) {
-  background: linear-gradient( var(--primary-gradient), var(--secondary-gradient));
+  background: linear-gradient(
+    var(--primary-gradient),
+    var(--secondary-gradient)
+  );
   color: white;
 }
 
 .cardWrapper:nth-child(2) button {
   color: var(--dark-grayish-blue);
   background: var(--very-light-grayish-blue);
+}
+
+.cardWrapper:nth-child(2) button:hover {
+  color: white;
+  background: linear-gradient(
+    to right,
+    var(--primary-gradient),
+    var(--secondary-gradient) 51%
+  );
+  outline: 1px solid white;
+}
+
+@media screen and (width >= 1024px) {
+  .container {
+    background: url("/src/assets/pricing-component/images/bg-top.svg"),
+      url("/src/assets/pricing-component/images/bg-bottom.svg"), var(--very-light-grayish-blue);
+    background-repeat: no-repeat;
+    background-position: right -50px top, left bottom;
+  }
+
+  .cardsContainer {
+    grid-template-columns: repeat(3, 350px);
+    gap: 0;
+  }
+
+  .cardWrapper {
+    position: relative;
+  }
+
+  .cardWrapper:nth-child(2) {
+    z-index: 20;
+  }
+
+  .cardWrapper:first-child,
+  .cardWrapper:nth-child(3) {
+    transform: scale(0.95);
+    position: relative;
+    z-index: 10;
+  }
 }
