--- a/src/App.css
+++ b/src/App.css
@@ -29,14 +29,27 @@ select {
 .previewOverlay {
   display: grid;
   place-content: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   min-height: 100vh;
   min-height: 100svh;
-  width: 100vw;
+  width: 100%;
   transform: translateX(-100vw);
   backdrop-filter: blur(30px);
   z-index: 10;
+  overflow: hidden;
+}
+
+.imageWrapper {
+  height: 80vh;
+  width: 90vw;
+  overflow: auto;
+}
+
+.previewImage {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 .previewButton {
@@ -92,4 +105,14 @@ select {
   to {
     transform: translateX(100vw);
   }
+}
+
+@media screen and (width > 1024px) {
+  .imageWrapper {
+    overflow: hidden;
+    height: 100vh;
+    display: grid;
+    place-content: center;
+  }
+
 }
